<?xml version="1.0"?>
<package format="2">
  <name>field_local_planner_rmp_plugin</name>
  <version>0.0.0</version>

  <description>ROS plugins for the local planners used in DRS</description>

  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Catkin packages -->
  <depend>actionlib_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>field_local_planner_base_plugin</depend>
  <depend>field_local_planner_rmp</depend>
  <depend>field_local_planner_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Plugins -->
  <export>
    <field_local_planner_base_plugin plugin="${prefix}/field_local_planner_plugin.xml" />
  </export>

</package>
