<?xml version="1.0"?>
<package format="2">
  <name>rmp</name>
  <version>0.0.0</version>

  <description>C++ Implementation of Riemannian Motion Policies</description>

  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gtsam</depend>
</package>
